Modify the script.js file heavily. Light corrections on css and html files
Fix the logic in the createGrid function

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 </head>
 <body>
     <h1>Welcome to the Etch-a-sketch page</h1>
-    <div id="parentDiv"></div>
-    <button id="gridNumber">Change the grid</button>
-    <button id="resetGame">Reset</button>
+    <div class="container">
+        <div id="parentDiv"></div>
+    </div>
+    <div id="button1">
+        <button id="gridNumber">Change the grid</button>
+    </div>
+    <div id="button2">
+        <button id="resetGame">Reset</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
